--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
+    "lucide-react": "^0.394.0",
     "next": "13.4.15",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
-    "tailwindcss": "3.3.3"
+    "swiper": "^11.1.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/react": "18.3.3"
   }
 }
