--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.1",
     "lucide-react": "^0.394.0",
     "next": "13.4.15",
+    "next-video": "^1.1.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
